<resources>
    <string name="app_name">Hikeculator</string>
    <string name="text_item_rv_title_name_label">Name</string>
    <string name="text_item_rv_title_member_label">Members</string>
    <string name="text_trip_item_title_date_label">Date</string>
    <string name="text_item_rv_title_tools">Волга</string>
    <string name="text_item_rv_count_tools">5</string>
    <string name="text_title_profile">Профиль</string>
    <string name="text_email_profile">romrom@gmail.com</string>
    <string name="text_calories_label">Рекомендуемое количество калорий</string>
    <string name="text_profile_calories">3100 Ккал</string>
    <string name="text_name_profile">Roman</string>
    <string name="text_radio_man">Мужской</string>
    <string name="text_radio_woman">Женский</string>
    <string name="hint_profile_name">Name</string>
    <string name="text_profile_name">Roman</string>
    <string name="hint_profile_age">Возраст</string>
    <string name="text_profile_age">Age</string>
    <string name="hint_profile_height">Height</string>
    <string name="text_profile_height">178</string>
    <string name="hint_profile_weight">Weight</string>
    <string name="text_profile_weight">79</string>
    <string name="text_button_save">Сохранить</string>
    <string name="text_app_bar_item_profile">Профиль</string>
    <string name="text_app_bar_item_hike">Походы</string>
    <string name="text_bottom_menu_item_hike">Поход</string>
    <string name="text_bottom_menu_item_bag">Корзина</string>
    <string name="text_bottom_menu_item_members">Участники</string>
    <string name="text_button_create">Create</string>
    <string name="text_radio_man_create_profile">Man</string>
    <string name="text_radio_woman_create_profile">Woman</string>
    <string name="text_create_profile_title">Profile creating</string>
    <string name="text_title_trip_creating">Trip creating</string>
    <string name="hint_create_hike_name_hint">Trip name</string>
    <string name="text_create_hike_name">Домбай</string>
    <string name="text_title_hike">Trip name</string>
    <string name="text_weight_trip_label">Provision weight:</string>
    <string name="text_trip_provision_weight">%d g</string>
    <string name="text_day_ordinal">Day %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_fields_have_to_be_filled">All fields have to be filled</string>
    <string name="season_dialog_fall">Fall</string>
    <string name="season_dialog_winter">Winter</string>
    <string name="season_dialog_summer">Summer</string>
    <string name="season_dialog_spring">Spring</string>
    <string name="season_dialog_title">Choose a season</string>
    <string name="confirm">Confirm</string>
    <string name="spring_enum_description">Spring</string>
    <string name="summer_enum_description">Summer</string>
    <string name="fall_enum_description">Fall</string>
    <string name="winter_enum_desctiption">Winter</string>
    <string name="non_enum_description">Choose the season</string>
    <string name="category_1_enam_description">Categori 1</string>
    <string name="category_2_enum_description">Categori 2</string>
    <string name="category_3_enum_description">Categori 3</string>
    <string name="category_4_enum_description">Categori 4</string>
    <string name="category_5_enum_description">Categori 5</string>
    <string name="category_6_enum_description">Categori 6</string>
    <string name="hike_type_enum_description">Hike</string>
    <string name="ski_type_enum_description">Ski</string>
    <string name="water_type_enum_description">Water</string>
    <string name="mountain_type_enum_description">Mountain</string>
    <string name="trip_season_choosing_action">Choose the season</string>
    <string name="trip_category_choosing_action">Choose the category</string>
    <string name="trip_date_picking_action">Pick the date</string>
    <string name="trip_type_choosing_action">Choose the type</string>
    <string name="trip_name_typing_action">type the name</string>
    <string name="date_text_view_pick_action">Pick the date</string>
    <string name="trip_creating_member_title">Members:</string>
    <string name="trip_type_choosing_title">Choose trip type</string>
    <string name="hike">Hike</string>
    <string name="ski">Ski</string>
    <string name="water">Water</string>
    <string name="mountain">Mountain</string>
    <string name="trip_category_choosing_title">Choose difficulty category</string>
    <string name="trip_category_1">Category 1</string>
    <string name="trip_category_2">Category 2</string>
    <string name="trip_category_3">Category 3</string>
    <string name="trip_category_4">Category 4</string>
    <string name="trip_category_5">Category 5</string>
    <string name="trip_category_6">Category 6</string>
    <string name="trip_member_searching_input_hint">type email for searching</string>
    <string name="date_picker_title_select_trip_date">Select the trip date</string>
    <string name="search_food">Search food</string>
    <string name="text_done">Done</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_add_custom_product">Add custom product</string>
    <string name="text_search_result">SEARCH RESULT</string>
    <string name="text_error_search">Internet or search error</string>
    <string name="text_error_saving_selected_product">Can not open this product</string>
    <string name="text_error_saving_receiving_product">Can not find product</string>
    <string name="text_error_saving_profile">Can not save profile</string>
    <string name="text_error_incorrect_fields">Incorrect data entered</string>
    <string name="text_description_add_product">Add product button</string>
    <string name="message_failed_to_create_the_trip">Failed to create the trip</string>
    <string name="problem_with_day_creating">There is a problem with day creating</string>
    <string name="problem_with_trip_creating">There is a problem with trip cteating</string>
    <string name="problem_with_member_search">There is a problem with member search</string>
    <string name="kcal">Kcal</string>
    <string name="grained_calorie_percents">%1$d%%</string>
    <string name="pfc_percents">%1$d%%</string>
    <string name="pfc_percentage">%d%%</string>
    <string name="proteins">proteins</string>
    <string name="fats">fats</string>
    <string name="carbs">carbs</string>
    <string name="problem_with_trip_updating">There is a problem with trip updating</string>
    <string name="problem_with_trip_getting">There is a problem with trip getting</string>
    <string name="problem_with_trip_deleting">There is a problem with trip deleting</string>
    <string name="text_data_saving">Data saving</string>
    <string name="format_kcal">%.2f kcal</string>
    <string name="format_kcal_long">%d kcal</string>
    <string name="format_fat">Fat %.2f</string>
    <string name="format_carbs">Carbs %.2f</string>
    <string name="format_protein">Protein %.2f</string>
    <string name="problem_with_trip_collection_getting">There is a problem with tirip collection getting</string>
    <string name="text_provision_bag_product_weight">%1$d g</string>
    <string name="provision_bag_screen_title">The provision bag of</string>
    <string name="problem_with_product_updating">There is a problem with product updating</string>
    <string name="problem_with_member_getting">There is a problem with member getting</string>
    <string name="member_deleting_question">Would you like to delete \"%1$s\" from the trip?"</string>
    <string name="problem_with_deleting_member">There is a problem with deleting member</string>
    <string name="member_management_member_quantity_title">Member quantity:</string>
    <string name="content_description_add_trip_member_button">add_trip_member</string>
    <string name="text_delete">delete</string>
    <string name="text_deny">deny</string>
    <string name="text_carbs">Carbs</string>
    <string name="text_view_calories">Calories</string>
    <string name="text_proteins">Proteins</string>
    <string name="text_fats">Fats</string>
    <string name="text_calories">Calories</string>
    <string name="text_zero">0</string>
    <string name="porblem_with_trip_collection_getting">There is a problem with tirip collection getting</string>
    <string name="text_breakfast">Breakfast</string>
    <string name="text_lunch">Lunch</string>
    <string name="text_dinner">Dinner</string>
    <string name="text_snack">Snack</string>
    <string name="text_profile">Profile</string>
    <string name="description_button_back">Button back</string>
    <string name="text_name">Name</string>
    <string name="text_weight">Weight</string>
    <string name="text_height">Height</string>
    <string name="text_age">Age</string>
    <string name="text_save">Save</string>
    <string name="text_sex_man">Man</string>
    <string name="text_sex_woman">Women</string>
    <string name="value_gram">%1$d g</string>
    <string name="value_gram_double">%1$.2f g</string>
    <string name="text_trip_day_note">of the trip \"%1$s\"</string>
    <string name="protein_pointer">p</string>
    <string name="fat_pointer">f</string>
    <string name="carb_pointer">c</string>
    <string name="content_description_delete_food_from_day_meal">delete food from day meal</string>
    <string name="problem_with_deleting_product">There is problem with deleting product</string>
    <string name="problem_with_getting_trip_day">There is a problem with getting trip day</string>
    <string name="description_navigation_icon">Navigation icon</string>
    <string name="description_button_add_trip">Button add trip</string>
    <string name="text_button_delete_user">text_button_delete_user</string>
    <string name="text_add">Add</string>
</resources>