<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_dialog"
    android:minWidth="300dp"
    android:minHeight="300dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    tools:context=".presentation.trip_creating.CategoryDialogFragment">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/trip_category_choosing_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title">

        <RadioButton
            android:id="@+id/radio_button_category_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/trip_category_1" />

        <RadioButton
            android:id="@+id/radio_button_category_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_category_2" />

        <RadioButton
            android:id="@+id/radio_button_category_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_category_3" />

        <RadioButton
            android:id="@+id/radio_button_category_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_category_4" />

        <RadioButton
            android:id="@+id/radio_button_category_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_category_5" />

        <RadioButton
            android:id="@+id/radio_button_category_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_category_6" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:rippleColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>