<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_registration_fields"
    android:minWidth="300dp"
    android:minHeight="300dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    tools:context=".presentation.trip_creating.SeasonDialogFragment">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/season_dialog_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title">

        <RadioButton
            android:id="@+id/radio_button_spring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/season_dialog_spring" />

        <RadioButton
            android:id="@+id/radio_button_summer"
            android:layout_width="wrap_content"
            style=""
            android:layout_height="wrap_content"
            android:text="@string/season_dialog_summer" />

        <RadioButton
            android:id="@+id/radio_button_winter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season_dialog_winter" />

        <RadioButton
            android:id="@+id/radio_button_fall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/season_dialog_fall" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.333"
        app:rippleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>