<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_green"
    android:minWidth="300dp"
    android:minHeight="300dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    tools:context=".presentation.trip_creating.TripTypeDialogFragment">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/trip_type_choosing_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="#A9E8DEDE"
        app:layout_constraintEnd_toEndOf="@+id/text_view_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <RadioButton
                android:id="@+id/radio_button_hike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:checked="true"
                android:text="@string/hike" />

            <RadioButton
                android:id="@+id/radio_button_ski"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/ski" />

            <RadioButton
                android:id="@+id/radio_button_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/water" />

            <RadioButton
                android:id="@+id/radio_button_mountain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/mountain" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:rippleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>